qq modifs sur le dashboard, l'algo et ajout d'une petite doc

--- a/views/dashbase/navbar.ejs
+++ b/views/dashbase/navbar.ejs
@@ -29,11 +29,11 @@
               </p>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Mike John responded to your email</a>
-              <a class="dropdown-item" href="#">You have 5 new tasks</a>
-              <a class="dropdown-item" href="#">You're now friend with Andrew</a>
-              <a class="dropdown-item" href="#">Another Notification</a>
-              <a class="dropdown-item" href="#">Another One</a>
+              <a class="dropdown-item" href="#">Notification 1</a>
+              <a class="dropdown-item" href="#">Notification 2</a>
+              <a class="dropdown-item" href="#">Notification 3</a>
+              <a class="dropdown-item" href="#">Notification 4</a>
+              <a class="dropdown-item" href="#">Notification 5</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -45,9 +45,9 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
               <a class="dropdown-item" href="#">Profile</a>
-              <a class="dropdown-item" href="#">Settings</a>
+              <a class="dropdown-item" href="#">Réglages</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Log out</a>
+              <a class="dropdown-item" href="#">DECONNEXION</a>
             </div>
           </li>
         </ul>
