--- a/views/root/gestion_individus/resultat_recherche_type1.ejs
+++ b/views/root/gestion_individus/resultat_recherche_type1.ejs
@@ -63,7 +63,7 @@
                                             <% } %>
                                 </td>
                                 <td>
-                                    18
+                                    <%= individu.age %> 
                                 </td>
                                 <td>
                                     <% if(individu.statut == 0) { %>
