--- a/views/dashbase/sidebar.ejs
+++ b/views/dashbase/sidebar.ejs
@@ -1,4 +1,5 @@
-<div class="sidebar" data-color="green" data-background-color="white" data-image="/template/dashboard/assets/img/sidebar-1.jpg">
+<div class="sidebar" data-color="green" data-background-color="white"
+    data-image="/template/dashboard/assets/img/sidebar-1.jpg">
 
     <div class="logo">
         <a href="" class="simple-text logo-normal">
@@ -6,25 +7,25 @@
         </a>
     </div>
     <div class="sidebar-wrapper">
-      <ul class="nav">
-        <% for(side of tabside) { %> 
-          <% if(side.active == 1) { %> 
+        <ul class="nav">
+            <% for(side of tabside) { %>
+            <% if(side.active == 1) { %>
             <li class="nav-item active">
-          <% } else { %> 
+                <% } else { %>
             <li class="nav-item">
-          <% } %> 
-            <a class="nav-link" href="<%= side.route %> ">
-              <i class="material-icons"><%= side.icone %></i>
-              <p><%= side.texte %></p>
-            </a>
-          </li>
-        <% } %> 
-        <li class="nav-item active-pro ">
-          <a class="nav-link" href="">
-            <i class="material-icons">unarchive</i>
-            <p>DECONNEXION</p>
-          </a>
-        </li>
-      </ul>
+                <% } %>
+                <a class="nav-link" href="<%= side.route %> ">
+                    <i class="material-icons"><%= side.icone %></i>
+                    <p><%= side.texte %></p>
+                </a>
+            </li>
+            <% } %>
+            <li class="nav-item active-pro ">
+                <a class="nav-link" href="/root/index/documentation">
+                    <i class="material-icons">book</i>
+                    <p>DOCUMENTATION</p>
+                </a>
+            </li>
+        </ul>
     </div>
-  </div>
+</div>
