--- a/views/dashbase/sidebar.ejs
+++ b/views/dashbase/sidebar.ejs
@@ -9,23 +9,26 @@
     <div class="sidebar-wrapper">
         <ul class="nav">
             <% for(side of tabside) { %>
-            <% if(side.active == 1) { %>
-            <li class="nav-item active">
-                <% } else { %>
-            <li class="nav-item">
-                <% } %>
-                <a class="nav-link" href="<%= side.route %> ">
-                    <i class="material-icons"><%= side.icone %></i>
-                    <p><%= side.texte %></p>
-                </a>
-            </li>
+                <% if(side.description.length != 0) { %> 
+                    <% if(side.active == 1) { %>
+                        <li class="nav-item active">
+                    <% } else { %>
+                        <li class="nav-item">
+                    <% } %>
+                    <a class="nav-link" href="<%= side.route %>">
+                        <i class="material-icons"><%= side.icone %></i>
+                        <p><%= side.texte %></p>
+                    </a>
+                </li>
+                <% } else { %> 
+                    <li class="nav-item active-pro ">
+                        <a class="nav-link" href="<%= side.route %>">
+                            <i class="material-icons"><%= side.icone %></i>
+                            <p><%= side.texte %></p>
+                        </a>
+                    </li>
+                <% } %> 
             <% } %>
-            <li class="nav-item active-pro ">
-                <a class="nav-link" href="/root/index/documentation">
-                    <i class="material-icons">book</i>
-                    <p>DOCUMENTATION</p>
-                </a>
-            </li>
         </ul>
     </div>
 </div>
