--- a/views/root/service_mapping/pandemie_nationale.ejs
+++ b/views/root/service_mapping/pandemie_nationale.ejs
@@ -1,1 +1,20 @@
-<%- extend('../../dashmap.ejs') %>
+<%- extend('../../dashbase.ejs') %>
+
+<div class="row justify-content-center">
+    <div class="col-md-4">
+        <a href="https://www.covid19-ci.info/" target="_blank" class="btn btn-info" style="color: black;">
+            <b>
+                Voir la source
+            </b>
+        </a>
+    </div>
+</div>
+
+<br>
+
+<div class="row justify-content-center">
+    <div class="col-md-10">
+        <iframe width="100%" height="780" src="https://www.covid19-ci.info/2fRL7EeOQlU.html" frameborder="0"></iframe>
+    </div>
+</div>
+
